templates/matrix_template.yaml
---
# Source: matrix/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.1.0
    helm.sh/chart: postgresql-13.4.4
    app.kubernetes.io/component: primary
  annotations:
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: matrix/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.1.0
    helm.sh/chart: postgresql-13.4.4
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: matrix/templates/coturn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-coturn
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: coturn
spec:
  type: ClusterIP
  ports:
    - port: 3478
      targetPort: turn-3478
      protocol: UDP
      name: turn-3478
    - port: 49152
      targetPort: 49152
      protocol: UDP
      name: turn-49152
    - port: 49153
      targetPort: 49153
      protocol: UDP
      name: turn-49153
    - port: 49154
      targetPort: 49154
      protocol: UDP
      name: turn-49154
    - port: 49155
      targetPort: 49155
      protocol: UDP
      name: turn-49155
    - port: 49156
      targetPort: 49156
      protocol: UDP
      name: turn-49156
    - port: 49157
      targetPort: 49157
      protocol: UDP
      name: turn-49157
    - port: 49158
      targetPort: 49158
      protocol: UDP
      name: turn-49158
    - port: 49159
      targetPort: 49159
      protocol: UDP
      name: turn-49159
    - port: 49160
      targetPort: 49160
      protocol: UDP
      name: turn-49160
    - port: 49161
      targetPort: 49161
      protocol: UDP
      name: turn-49161
    - port: 49162
      targetPort: 49162
      protocol: UDP
      name: turn-49162
    - port: 49163
      targetPort: 49163
      protocol: UDP
      name: turn-49163
    - port: 49164
      targetPort: 49164
      protocol: UDP
      name: turn-49164
    - port: 49165
      targetPort: 49165
      protocol: UDP
      name: turn-49165
    - port: 49166
      targetPort: 49166
      protocol: UDP
      name: turn-49166
    - port: 49167
      targetPort: 49167
      protocol: UDP
      name: turn-49167
    - port: 49168
      targetPort: 49168
      protocol: UDP
      name: turn-49168
    - port: 49169
      targetPort: 49169
      protocol: UDP
      name: turn-49169
    - port: 49170
      targetPort: 49170
      protocol: UDP
      name: turn-49170
    - port: 49171
      targetPort: 49171
      protocol: UDP
      name: turn-49171
    - port: 49172
      targetPort: 49172
      protocol: UDP
      name: turn-49172
  selector:
    app.kubernetes.io/name: matrix-coturn
    app.kubernetes.io/instance: release-name
---
# Source: matrix/templates/exim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-exim-relay
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: mail
spec:
  type: ClusterIP
  ports:
    - port: 25
      targetPort: smtp
      protocol: TCP
      name: smtp
  selector:
    app.kubernetes.io/name: matrix-exim-relay
    app.kubernetes.io/instance: release-name
---
# Source: matrix/templates/riot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-riot
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    
    component: element
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: matrix-riot
    app.kubernetes.io/instance: release-name
---
# Source: matrix/templates/synapse/federation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-synapse-federation
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: synapse
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/instance: release-name
---
# Source: matrix/templates/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-synapse
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: synapse
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/_synapse/metrics"
    prometheus.io/port: "9092"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9092
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/instance: release-name
---
# Source: matrix/templates/coturn/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: release-name-matrix-coturn
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: coturn
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-coturn
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        # re-roll deployment on config change
        checksum/coturn-config: 60f97afe3f45a1535218407035648e80449369d0677991106ad10eaf03687333
      labels:
        app.kubernetes.io/name: matrix-coturn
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      hostNetwork: true
      containers:
        - name: "coturn"
          image: "instrumentisto/coturn:4.5"
          imagePullPolicy: IfNotPresent
          args: ["-c", "/turnserver.conf"]
          ports:
            - name: turn-3478
              containerPort: 3478
              protocol: UDP
            - name: turn-49152
              containerPort: 49152
              hostPort: 49152
              protocol: UDP
            - name: turn-49153
              containerPort: 49153
              hostPort: 49153
              protocol: UDP
            - name: turn-49154
              containerPort: 49154
              hostPort: 49154
              protocol: UDP
            - name: turn-49155
              containerPort: 49155
              hostPort: 49155
              protocol: UDP
            - name: turn-49156
              containerPort: 49156
              hostPort: 49156
              protocol: UDP
            - name: turn-49157
              containerPort: 49157
              hostPort: 49157
              protocol: UDP
            - name: turn-49158
              containerPort: 49158
              hostPort: 49158
              protocol: UDP
            - name: turn-49159
              containerPort: 49159
              hostPort: 49159
              protocol: UDP
            - name: turn-49160
              containerPort: 49160
              hostPort: 49160
              protocol: UDP
            - name: turn-49161
              containerPort: 49161
              hostPort: 49161
              protocol: UDP
            - name: turn-49162
              containerPort: 49162
              hostPort: 49162
              protocol: UDP
            - name: turn-49163
              containerPort: 49163
              hostPort: 49163
              protocol: UDP
            - name: turn-49164
              containerPort: 49164
              hostPort: 49164
              protocol: UDP
            - name: turn-49165
              containerPort: 49165
              hostPort: 49165
              protocol: UDP
            - name: turn-49166
              containerPort: 49166
              hostPort: 49166
              protocol: UDP
            - name: turn-49167
              containerPort: 49167
              hostPort: 49167
              protocol: UDP
            - name: turn-49168
              containerPort: 49168
              hostPort: 49168
              protocol: UDP
            - name: turn-49169
              containerPort: 49169
              hostPort: 49169
              protocol: UDP
            - name: turn-49170
              containerPort: 49170
              hostPort: 49170
              protocol: UDP
            - name: turn-49171
              containerPort: 49171
              hostPort: 49171
              protocol: UDP
            - name: turn-49172
              containerPort: 49172
              hostPort: 49172
              protocol: UDP
          volumeMounts:
            - name: coturn-config
              mountPath: /turnserver.conf
              subPath: turnserver.conf
              readOnly: true
            - name: var-tmp
              mountPath: /var/tmp
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
      volumes:
        - name: coturn-config
          configMap:
            name: release-name-matrix-coturn-config
        - name: var-tmp
          emptyDir: {}
---
# Source: matrix/templates/exim/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-matrix-exim-relay
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-exim-relay
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matrix-exim-relay
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 100
        runAsGroup: 101
      containers:
        - name: "exim-relay"
          image: "devture/exim-relay:4.95-r0-4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp
              containerPort: 8025
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: smtp
          startupProbe:
            tcpSocket:
              port: smtp
          livenessProbe:
            tcpSocket:
              port: smtp
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
---
# Source: matrix/templates/riot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-matrix-riot
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    
    component: element
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-riot
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        # re-roll deployment on config change
        checksum/riot-config: 348d7f34638975ed45590c9aff419348bc9387d70b0ec2dc0e84bbf7e67b1b27
      labels:
        app.kubernetes.io/name: matrix-riot
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: "riot"
          image: "vectorim/riot-web:v1.7.33"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config.json
              name: riot-config
              subPath: config.json
              readOnly: true
            - mountPath: /etc/nginx/nginx.conf
              name: riot-config
              subPath: nginx.conf
              readOnly: true
            - mountPath: /etc/nginx/conf.d/default.conf
              name: riot-config
              subPath: default.conf
              readOnly: true
            - mountPath: /var/cache/nginx
              name: ephemeral
              subPath: cache
            - mountPath: /var/run/pid
              name: ephemeral
              subPath: pid
          readinessProbe:
            httpGet:
              path: /
              port: http
          startupProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
      volumes:
        - name: riot-config
          configMap:
            name: release-name-matrix-riot-config
        # ephemeral cache, PID file, and any other temporary files nginx needs access to
        - name: ephemeral
          emptyDir: {}
---
# Source: matrix/templates/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-matrix-synapse
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: synapse
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-synapse
      app.kubernetes.io/instance: release-name
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        # re-roll deployment on homeserver.yaml change
        checksum/synapse-config: 58ec753c386e4e43137f40f6ea169445d78789a0075d04b1cf85c3bbcafc0a18
      labels:
        app.kubernetes.io/name: matrix-synapse
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      # generate signing key only on fresh install
      containers:
        - name: "synapse"
          image: "matrixdotorg/synapse:v1.105.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8008
              protocol: TCP
            - name: metrics
              containerPort: 9092
              protocol: TCP
          volumeMounts:
            - name: synapse-config
              mountPath: /data
            - name: signing-key
              mountPath: /data/keys
            - name: media-store
              mountPath: /data/media_store
            - name: uploads
              mountPath: /data/uploads
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /_matrix/static/
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /_matrix/static/
              port: http
            failureThreshold: 6
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /_matrix/static/
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: true
      volumes:
        - name: synapse-config
          configMap:
            name: release-name-matrix-synapse-config
        - name: signing-key
          persistentVolumeClaim:
            claimName: release-name-matrix-signing-key
        - name: media-store
          persistentVolumeClaim:
            claimName: release-name-matrix-media-store
        # Ephemeral in-progress uploads
        - name: uploads
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
# Source: matrix/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.1.0
    helm.sh/chart: postgresql-13.4.4
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: release-name-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 16.1.0
        helm.sh/chart: postgresql-13.4.4
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: release-name-postgresql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:16.1.0-debian-11-r25
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: custom-init-scripts
              mountPath: /docker-entrypoint-initdb.d/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: custom-init-scripts
          configMap:
            name: release-name-postgresql-initdb
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: matrix/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-matrix
  labels:
    helm.sh/chart: matrix-2.49.0
    app.kubernetes.io/version: "v1.105.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_intercept_errors off;
spec:
  rules:
    - host: matrix.chart-example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "release-name-matrix-synapse"
                port:
                  number: 80
    - host: element.chart-example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "release-name-matrix-riot"
                port:
                  number: 80
    - host: matrix-fed.chart-example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "release-name-matrix-synapse-federation"
                port:
                  number: 80
